[metadata]
name = sorcery
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Dark magic delights in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmojaki/sorcery
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = sorcery
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]
install_requires =
    executing
    littleutils>=0.2.1
    asttokens
    wrapt

[coverage:run]
relative_files = True
